// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Command List renders a command 1`] = `
<div
  className="item"
>
  <span />
</div>
`;

exports[`Loading indicator should display a custom react component when props.spinner is set 1`] = `
<b>
  Waiting
</b>
`;

exports[`Loading indicator should display a custom string when props.spinner is set 1`] = `
<div
  className="spinner"
  role="status"
>
  Waiting
</div>
`;

exports[`Loading indicator should display the spinner by default 1`] = `
<div
  className="default-spinner"
  role="status"
>
  <span
    className="sr-only"
  >
    Loading...
  </span>
</div>
`;

exports[`Opening the palette displays the suggestion list 1`] = `
<CommandPalette
  closeOnSelect={false}
  commands={
    Array [
      Object {
        "command": [Function],
        "id": 1,
        "name": "Foo",
      },
      Object {
        "command": [Function],
        "id": 2,
        "name": "Bar",
      },
      Object {
        "command": [Function],
        "id": 3,
        "name": "Baz",
      },
      Object {
        "command": [Function],
        "id": 4,
        "name": "Fizz",
      },
      Object {
        "command": [Function],
        "id": 5,
        "name": "Fizz Buzz",
      },
    ]
  }
  display="modal"
  hotKeys="command+shift+p"
  maxDisplayed={7}
  options={
    Object {
      "allowTypo": true,
      "key": "name",
      "keys": Array [
        "name",
      ],
      "limit": 7,
      "scoreFn": null,
      "threshold": -Infinity,
    }
  }
>
  <div
    className="react-command-palette"
  >
    <PaletteTrigger
      onClick={[Function]}
    >
      <DefaultTriggerComponent
        onClick={[Function]}
      >
        <button
          className="ui button"
          onClick={[Function]}
          type="button"
        >
          Command Palette  
          <kbd
            className="ui mini horizontal grey label"
          >
            <span
              style={
                Object {
                  "clip": "rect(1px, 1px, 1px, 1px)",
                  "display": "inline-block",
                  "height": "1px",
                  "overflow": "hidden",
                  "position": "absolute !important",
                  "width": "1px",
                }
              }
            >
               Keyboard Shortcut 
            </span>
            ⇧⌘P
          </kbd>
        </button>
      </DefaultTriggerComponent>
    </PaletteTrigger>
    <Modal
      appElement={
        <body
          aria-hidden="true"
          class="ReactModal__Body--open"
        >
          <div
            class="ReactModalPortal"
          >
            <div
              class="ReactModal__Overlay ReactModal__Overlay--after-open"
              style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75);"
            >
              <div
                aria-label="Command Palette"
                class="ReactModal__Content ReactModal__Content--after-open"
                role="dialog"
                style="position: absolute; top: 80px; left: 50%; border: 0px none; background: rgb(48, 51, 56); overflow: hidden; border-radius: 4px; outline: none; padding: 10px; box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px; margin-right: -50%; transform: translate(-50%, 0); min-width: 600px;"
                tabindex="-1"
              >
                <div
                  class="default-spinner"
                  role="status"
                >
                  <span
                    class="sr-only"
                  >
                    Loading...
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ReactModalPortal"
          >
            <div
              class="ReactModal__Overlay ReactModal__Overlay--after-open"
              style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75);"
            >
              <div
                aria-label="Command Palette"
                class="ReactModal__Content ReactModal__Content--after-open"
                role="dialog"
                style="position: absolute; top: 80px; left: 50%; border: 0px none; background: rgb(48, 51, 56); overflow: hidden; border-radius: 4px; outline: none; padding: 10px; box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px; margin-right: -50%; transform: translate(-50%, 0); min-width: 600px;"
                tabindex="-1"
              >
                <div
                  class="spinner"
                  role="status"
                >
                  <span
                    class="sr-only"
                  >
                    Loading...
                  </span>
                  <b>
                    Waiting
                  </b>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ReactModalPortal"
          >
            <div
              class="ReactModal__Overlay ReactModal__Overlay--after-open"
              style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75);"
            >
              <div
                aria-label="Command Palette"
                class="ReactModal__Content ReactModal__Content--after-open"
                role="dialog"
                style="position: absolute; top: 80px; left: 50%; border: 0px none; background: rgb(48, 51, 56); overflow: hidden; border-radius: 4px; outline: none; padding: 10px; box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px; margin-right: -50%; transform: translate(-50%, 0); min-width: 600px;"
                tabindex="-1"
              >
                <div
                  class="spinner"
                  role="status"
                >
                  Waiting
                </div>
              </div>
            </div>
          </div>
          <div
            class="ReactModalPortal"
          />
          <div
            class="ReactModalPortal"
          />
          <div
            class="ReactModalPortal"
          />
          <div
            class="ReactModalPortal"
          >
            <div
              class="ReactModal__Overlay ReactModal__Overlay--after-open"
              style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75);"
            >
              <div
                aria-label="Command Palette"
                class="ReactModal__Content ReactModal__Content--after-open"
                role="dialog"
                style="position: absolute; top: 80px; left: 50%; border: 0px none; background: rgb(48, 51, 56); overflow: hidden; border-radius: 4px; outline: none; padding: 10px; box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px; margin-right: -50%; transform: translate(-50%, 0); min-width: 600px;"
                tabindex="-1"
              >
                <div
                  aria-expanded="true"
                  aria-haspopup="listbox"
                  aria-owns="react-autowhatever-1"
                  role="combobox"
                  style="font-family: helvetica, sans-serif; font-size: 12px; width: 605px;"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="react-autowhatever-1"
                    autocomplete="off"
                    placeholder="Type a command"
                    style="font-size: 14px; border: 2px solid #2196f3; border-radius: 4px; width: 590px; padding: 6px; outline: none; background-color: rgb(31, 32, 33); color: rgb(171, 171, 171); caret-color: #2196F3;"
                    type="text"
                    value=""
                  />
                  <div
                    id="react-autowhatever-1"
                    role="listbox"
                    style="overflow: hidden; border-top: 1px solid #111; border-bottom: 1px solid #111; max-height: 315px; margin-top: 10px;"
                  >
                    <ul
                      role="listbox"
                      style="list-style: none; padding: 0px; margin-bottom: 0px; margin-top: 0px;"
                    >
                      <li
                        aria-selected="false"
                        data-suggestion-index="0"
                        id="react-autowhatever-1--item-0"
                        role="option"
                        style="color: rgb(255, 255, 255); border: 1px solid #111; background-color: rgb(58, 63, 75); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Foo
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="1"
                        id="react-autowhatever-1--item-1"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Bar
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="2"
                        id="react-autowhatever-1--item-2"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Baz
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="3"
                        id="react-autowhatever-1--item-3"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Fizz
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="4"
                        id="react-autowhatever-1--item-4"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Fizz Buzz
                          </span>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ReactModalPortal"
          >
            <div
              class="ReactModal__Overlay ReactModal__Overlay--after-open"
              style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75);"
            >
              <div
                aria-label="Command Palette"
                class="ReactModal__Content ReactModal__Content--after-open"
                role="dialog"
                style="position: absolute; top: 80px; left: 50%; border: 0px none; background: rgb(48, 51, 56); overflow: hidden; border-radius: 4px; outline: none; padding: 10px; box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px; margin-right: -50%; transform: translate(-50%, 0); min-width: 600px;"
                tabindex="-1"
              >
                <div
                  aria-expanded="true"
                  aria-haspopup="listbox"
                  aria-owns="react-autowhatever-1"
                  role="combobox"
                  style="font-family: helvetica, sans-serif; font-size: 12px; width: 605px;"
                >
                  <input
                    aria-activedescendant="react-autowhatever-1--item-0"
                    aria-autocomplete="list"
                    aria-controls="react-autowhatever-1"
                    autocomplete="off"
                    placeholder="Type a command"
                    style="font-size: 14px; border: 2px solid #2196f3; border-radius: 4px; width: 590px; padding: 6px; outline: none; background-color: rgb(31, 32, 33); color: rgb(171, 171, 171); caret-color: #2196F3;"
                    type="text"
                    value=""
                  />
                  <div
                    id="react-autowhatever-1"
                    role="listbox"
                    style="overflow: hidden; border-top: 1px solid #111; border-bottom: 1px solid #111; max-height: 315px; margin-top: 10px;"
                  >
                    <ul
                      role="listbox"
                      style="list-style: none; padding: 0px; margin-bottom: 0px; margin-top: 0px;"
                    >
                      <li
                        aria-selected="true"
                        data-suggestion-index="0"
                        id="react-autowhatever-1--item-0"
                        role="option"
                        style="color: rgb(255, 255, 255); border: 1px solid #111; background-color: rgb(58, 63, 75); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Foo
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="1"
                        id="react-autowhatever-1--item-1"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Bar
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="2"
                        id="react-autowhatever-1--item-2"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Baz
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="3"
                        id="react-autowhatever-1--item-3"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Fizz
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="4"
                        id="react-autowhatever-1--item-4"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Fizz Buzz
                          </span>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </body>
      }
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      closeTimeoutMS={1}
      contentLabel="Command Palette"
      isOpen={true}
      onAfterOpen={[Function]}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      role="dialog"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "WebkitOverflowScrolling": "touch",
            "background": "rgb(48, 51, 56)",
            "border": "0px none",
            "borderRadius": "4px",
            "bottom": "auto",
            "boxShadow": "rgb(0, 0, 0) 0px 2px 4px 0px",
            "left": "50%",
            "marginRight": "-50%",
            "minWidth": "600px",
            "outline": "none",
            "overflow": "hidden",
            "padding": "10px",
            "position": "absolute",
            "right": "auto",
            "top": "80px",
            "transform": "translate(-50%, 0)",
          },
          "overlay": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.75)",
          },
        }
      }
    >
      <Portal
        containerInfo={
          <div
            class="ReactModalPortal"
          >
            <div
              class="ReactModal__Overlay ReactModal__Overlay--after-open"
              style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75);"
            >
              <div
                aria-label="Command Palette"
                class="ReactModal__Content ReactModal__Content--after-open"
                role="dialog"
                style="position: absolute; top: 80px; left: 50%; border: 0px none; background: rgb(48, 51, 56); overflow: hidden; border-radius: 4px; outline: none; padding: 10px; box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px; margin-right: -50%; transform: translate(-50%, 0); min-width: 600px;"
                tabindex="-1"
              >
                <div
                  aria-expanded="true"
                  aria-haspopup="listbox"
                  aria-owns="react-autowhatever-1"
                  role="combobox"
                  style="font-family: helvetica, sans-serif; font-size: 12px; width: 605px;"
                >
                  <input
                    aria-activedescendant="react-autowhatever-1--item-0"
                    aria-autocomplete="list"
                    aria-controls="react-autowhatever-1"
                    autocomplete="off"
                    placeholder="Type a command"
                    style="font-size: 14px; border: 2px solid #2196f3; border-radius: 4px; width: 590px; padding: 6px; outline: none; background-color: rgb(31, 32, 33); color: rgb(171, 171, 171); caret-color: #2196F3;"
                    type="text"
                    value=""
                  />
                  <div
                    id="react-autowhatever-1"
                    role="listbox"
                    style="overflow: hidden; border-top: 1px solid #111; border-bottom: 1px solid #111; max-height: 315px; margin-top: 10px;"
                  >
                    <ul
                      role="listbox"
                      style="list-style: none; padding: 0px; margin-bottom: 0px; margin-top: 0px;"
                    >
                      <li
                        aria-selected="true"
                        data-suggestion-index="0"
                        id="react-autowhatever-1--item-0"
                        role="option"
                        style="color: rgb(255, 255, 255); border: 1px solid #111; background-color: rgb(58, 63, 75); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Foo
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="1"
                        id="react-autowhatever-1--item-1"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Bar
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="2"
                        id="react-autowhatever-1--item-2"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Baz
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="3"
                        id="react-autowhatever-1--item-3"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Fizz
                          </span>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        data-suggestion-index="4"
                        id="react-autowhatever-1--item-4"
                        role="option"
                        style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                      >
                        <div
                          class="item"
                        >
                          <span>
                            Fizz Buzz
                          </span>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <ModalPortal
          appElement={
            <body
              aria-hidden="true"
              class="ReactModal__Body--open"
            >
              <div
                class="ReactModalPortal"
              >
                <div
                  class="ReactModal__Overlay ReactModal__Overlay--after-open"
                  style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75);"
                >
                  <div
                    aria-label="Command Palette"
                    class="ReactModal__Content ReactModal__Content--after-open"
                    role="dialog"
                    style="position: absolute; top: 80px; left: 50%; border: 0px none; background: rgb(48, 51, 56); overflow: hidden; border-radius: 4px; outline: none; padding: 10px; box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px; margin-right: -50%; transform: translate(-50%, 0); min-width: 600px;"
                    tabindex="-1"
                  >
                    <div
                      class="default-spinner"
                      role="status"
                    >
                      <span
                        class="sr-only"
                      >
                        Loading...
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ReactModalPortal"
              >
                <div
                  class="ReactModal__Overlay ReactModal__Overlay--after-open"
                  style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75);"
                >
                  <div
                    aria-label="Command Palette"
                    class="ReactModal__Content ReactModal__Content--after-open"
                    role="dialog"
                    style="position: absolute; top: 80px; left: 50%; border: 0px none; background: rgb(48, 51, 56); overflow: hidden; border-radius: 4px; outline: none; padding: 10px; box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px; margin-right: -50%; transform: translate(-50%, 0); min-width: 600px;"
                    tabindex="-1"
                  >
                    <div
                      class="spinner"
                      role="status"
                    >
                      <span
                        class="sr-only"
                      >
                        Loading...
                      </span>
                      <b>
                        Waiting
                      </b>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ReactModalPortal"
              >
                <div
                  class="ReactModal__Overlay ReactModal__Overlay--after-open"
                  style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75);"
                >
                  <div
                    aria-label="Command Palette"
                    class="ReactModal__Content ReactModal__Content--after-open"
                    role="dialog"
                    style="position: absolute; top: 80px; left: 50%; border: 0px none; background: rgb(48, 51, 56); overflow: hidden; border-radius: 4px; outline: none; padding: 10px; box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px; margin-right: -50%; transform: translate(-50%, 0); min-width: 600px;"
                    tabindex="-1"
                  >
                    <div
                      class="spinner"
                      role="status"
                    >
                      Waiting
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ReactModalPortal"
              />
              <div
                class="ReactModalPortal"
              />
              <div
                class="ReactModalPortal"
              />
              <div
                class="ReactModalPortal"
              >
                <div
                  class="ReactModal__Overlay ReactModal__Overlay--after-open"
                  style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75);"
                >
                  <div
                    aria-label="Command Palette"
                    class="ReactModal__Content ReactModal__Content--after-open"
                    role="dialog"
                    style="position: absolute; top: 80px; left: 50%; border: 0px none; background: rgb(48, 51, 56); overflow: hidden; border-radius: 4px; outline: none; padding: 10px; box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px; margin-right: -50%; transform: translate(-50%, 0); min-width: 600px;"
                    tabindex="-1"
                  >
                    <div
                      aria-expanded="true"
                      aria-haspopup="listbox"
                      aria-owns="react-autowhatever-1"
                      role="combobox"
                      style="font-family: helvetica, sans-serif; font-size: 12px; width: 605px;"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="react-autowhatever-1"
                        autocomplete="off"
                        placeholder="Type a command"
                        style="font-size: 14px; border: 2px solid #2196f3; border-radius: 4px; width: 590px; padding: 6px; outline: none; background-color: rgb(31, 32, 33); color: rgb(171, 171, 171); caret-color: #2196F3;"
                        type="text"
                        value=""
                      />
                      <div
                        id="react-autowhatever-1"
                        role="listbox"
                        style="overflow: hidden; border-top: 1px solid #111; border-bottom: 1px solid #111; max-height: 315px; margin-top: 10px;"
                      >
                        <ul
                          role="listbox"
                          style="list-style: none; padding: 0px; margin-bottom: 0px; margin-top: 0px;"
                        >
                          <li
                            aria-selected="false"
                            data-suggestion-index="0"
                            id="react-autowhatever-1--item-0"
                            role="option"
                            style="color: rgb(255, 255, 255); border: 1px solid #111; background-color: rgb(58, 63, 75); padding: 14px 12px;"
                          >
                            <div
                              class="item"
                            >
                              <span>
                                Foo
                              </span>
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            data-suggestion-index="1"
                            id="react-autowhatever-1--item-1"
                            role="option"
                            style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                          >
                            <div
                              class="item"
                            >
                              <span>
                                Bar
                              </span>
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            data-suggestion-index="2"
                            id="react-autowhatever-1--item-2"
                            role="option"
                            style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                          >
                            <div
                              class="item"
                            >
                              <span>
                                Baz
                              </span>
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            data-suggestion-index="3"
                            id="react-autowhatever-1--item-3"
                            role="option"
                            style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                          >
                            <div
                              class="item"
                            >
                              <span>
                                Fizz
                              </span>
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            data-suggestion-index="4"
                            id="react-autowhatever-1--item-4"
                            role="option"
                            style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                          >
                            <div
                              class="item"
                            >
                              <span>
                                Fizz Buzz
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ReactModalPortal"
              >
                <div
                  class="ReactModal__Overlay ReactModal__Overlay--after-open"
                  style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75);"
                >
                  <div
                    aria-label="Command Palette"
                    class="ReactModal__Content ReactModal__Content--after-open"
                    role="dialog"
                    style="position: absolute; top: 80px; left: 50%; border: 0px none; background: rgb(48, 51, 56); overflow: hidden; border-radius: 4px; outline: none; padding: 10px; box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px; margin-right: -50%; transform: translate(-50%, 0); min-width: 600px;"
                    tabindex="-1"
                  >
                    <div
                      aria-expanded="true"
                      aria-haspopup="listbox"
                      aria-owns="react-autowhatever-1"
                      role="combobox"
                      style="font-family: helvetica, sans-serif; font-size: 12px; width: 605px;"
                    >
                      <input
                        aria-activedescendant="react-autowhatever-1--item-0"
                        aria-autocomplete="list"
                        aria-controls="react-autowhatever-1"
                        autocomplete="off"
                        placeholder="Type a command"
                        style="font-size: 14px; border: 2px solid #2196f3; border-radius: 4px; width: 590px; padding: 6px; outline: none; background-color: rgb(31, 32, 33); color: rgb(171, 171, 171); caret-color: #2196F3;"
                        type="text"
                        value=""
                      />
                      <div
                        id="react-autowhatever-1"
                        role="listbox"
                        style="overflow: hidden; border-top: 1px solid #111; border-bottom: 1px solid #111; max-height: 315px; margin-top: 10px;"
                      >
                        <ul
                          role="listbox"
                          style="list-style: none; padding: 0px; margin-bottom: 0px; margin-top: 0px;"
                        >
                          <li
                            aria-selected="true"
                            data-suggestion-index="0"
                            id="react-autowhatever-1--item-0"
                            role="option"
                            style="color: rgb(255, 255, 255); border: 1px solid #111; background-color: rgb(58, 63, 75); padding: 14px 12px;"
                          >
                            <div
                              class="item"
                            >
                              <span>
                                Foo
                              </span>
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            data-suggestion-index="1"
                            id="react-autowhatever-1--item-1"
                            role="option"
                            style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                          >
                            <div
                              class="item"
                            >
                              <span>
                                Bar
                              </span>
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            data-suggestion-index="2"
                            id="react-autowhatever-1--item-2"
                            role="option"
                            style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                          >
                            <div
                              class="item"
                            >
                              <span>
                                Baz
                              </span>
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            data-suggestion-index="3"
                            id="react-autowhatever-1--item-3"
                            role="option"
                            style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                          >
                            <div
                              class="item"
                            >
                              <span>
                                Fizz
                              </span>
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            data-suggestion-index="4"
                            id="react-autowhatever-1--item-4"
                            role="option"
                            style="color: rgb(171, 171, 171); border: 1px solid #111; background-color: rgb(44, 49, 58); padding: 14px 12px;"
                          >
                            <div
                              class="item"
                            >
                              <span>
                                Fizz Buzz
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </body>
          }
          ariaHideApp={true}
          bodyOpenClassName="ReactModal__Body--open"
          closeTimeoutMS={1}
          contentLabel="Command Palette"
          defaultStyles={
            Object {
              "content": Object {
                "WebkitOverflowScrolling": "touch",
                "background": "#fff",
                "border": "1px solid #ccc",
                "borderRadius": "4px",
                "bottom": "40px",
                "left": "40px",
                "outline": "none",
                "overflow": "auto",
                "padding": "20px",
                "position": "absolute",
                "right": "40px",
                "top": "40px",
              },
              "overlay": Object {
                "backgroundColor": "rgba(255, 255, 255, 0.75)",
                "bottom": 0,
                "left": 0,
                "position": "fixed",
                "right": 0,
                "top": 0,
              },
            }
          }
          isOpen={true}
          onAfterOpen={[Function]}
          onRequestClose={[Function]}
          parentSelector={[Function]}
          portalClassName="ReactModalPortal"
          role="dialog"
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          shouldFocusAfterRender={true}
          shouldReturnFocusAfterClose={true}
          style={
            Object {
              "content": Object {
                "WebkitOverflowScrolling": "touch",
                "background": "rgb(48, 51, 56)",
                "border": "0px none",
                "borderRadius": "4px",
                "bottom": "auto",
                "boxShadow": "rgb(0, 0, 0) 0px 2px 4px 0px",
                "left": "50%",
                "marginRight": "-50%",
                "minWidth": "600px",
                "outline": "none",
                "overflow": "hidden",
                "padding": "10px",
                "position": "absolute",
                "right": "auto",
                "top": "80px",
                "transform": "translate(-50%, 0)",
              },
              "overlay": Object {
                "backgroundColor": "rgba(0, 0, 0, 0.75)",
              },
            }
          }
        >
          <div
            className="ReactModal__Overlay ReactModal__Overlay--after-open"
            onClick={[Function]}
            onMouseDown={[Function]}
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.75)",
                "bottom": 0,
                "left": 0,
                "position": "fixed",
                "right": 0,
                "top": 0,
              }
            }
          >
            <div
              aria-label="Command Palette"
              className="ReactModal__Content ReactModal__Content--after-open"
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="dialog"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "background": "rgb(48, 51, 56)",
                  "border": "0px none",
                  "borderRadius": "4px",
                  "bottom": "auto",
                  "boxShadow": "rgb(0, 0, 0) 0px 2px 4px 0px",
                  "left": "50%",
                  "marginRight": "-50%",
                  "minWidth": "600px",
                  "outline": "none",
                  "overflow": "hidden",
                  "padding": "10px",
                  "position": "absolute",
                  "right": "auto",
                  "top": "80px",
                  "transform": "translate(-50%, 0)",
                }
              }
              tabIndex="-1"
            >
              <Autosuggest
                alwaysRenderSuggestions={true}
                focusInputOnSuggestionClick={true}
                getSuggestionValue={[Function]}
                highlightFirstSuggestion={true}
                id="1"
                inputProps={
                  Object {
                    "onChange": [Function],
                    "onKeyDown": undefined,
                    "placeholder": "Type a command",
                    "value": "",
                  }
                }
                multiSection={false}
                onSuggestionSelected={[Function]}
                onSuggestionsFetchRequested={[Function]}
                renderSuggestion={[Function]}
                renderSuggestionsContainer={[Function]}
                shouldRenderSuggestions={[Function]}
                suggestions={
                  Array [
                    Object {
                      "command": [Function],
                      "id": 1,
                      "name": "Foo",
                    },
                    Object {
                      "command": [Function],
                      "id": 2,
                      "name": "Bar",
                    },
                    Object {
                      "command": [Function],
                      "id": 3,
                      "name": "Baz",
                    },
                    Object {
                      "command": [Function],
                      "id": 4,
                      "name": "Fizz",
                    },
                    Object {
                      "command": [Function],
                      "id": 5,
                      "name": "Fizz Buzz",
                    },
                  ]
                }
                theme={
                  Object {
                    "container": Object {
                      "fontFamily": "helvetica, sans-serif",
                      "fontSize": "12px",
                      "width": "605px",
                    },
                    "containerOpen": Object {},
                    "content": Object {
                      "WebkitOverflowScrolling": "touch",
                      "background": "rgb(48, 51, 56)",
                      "border": "0px none",
                      "borderRadius": "4px",
                      "bottom": "auto",
                      "boxShadow": "rgb(0, 0, 0) 0px 2px 4px 0px",
                      "left": "50%",
                      "marginRight": "-50%",
                      "minWidth": "600px",
                      "outline": "none",
                      "overflow": "hidden",
                      "padding": "10px",
                      "position": "absolute",
                      "right": "auto",
                      "top": "80px",
                      "transform": "translate(-50%, 0)",
                    },
                    "highlight": Object {
                      "backgroundColor": "yellow",
                    },
                    "input": Object {
                      "backgroundColor": "#1f2021",
                      "border": "2px solid #2196F3",
                      "borderRadius": "4px",
                      "caretColor": "#2196F3",
                      "color": "#ababab",
                      "fontSize": "14px",
                      "outline": "none",
                      "padding": "6px",
                      "width": "590px",
                    },
                    "inputFocused": Object {},
                    "inputOpen": Object {},
                    "overlay": Object {
                      "backgroundColor": "rgba(0, 0, 0, 0.75)",
                    },
                    "sectionContainer": Object {},
                    "sectionContainerFirst": Object {},
                    "sectionTitle": Object {},
                    "suggestion": Object {
                      "backgroundColor": "#2c313a",
                      "border": "1px solid #111",
                      "borderTop": "0px none",
                      "color": "#ababab",
                      "padding": "14px 12px",
                    },
                    "suggestionFirst": Object {
                      "backgroundColor": "#3a3f4b",
                      "color": "#ffffff",
                    },
                    "suggestionHighlighted": Object {
                      "backgroundColor": "#3a3f4b",
                      "color": "#ffffff",
                    },
                    "suggestionsContainer": Object {
                      "borderBottom": "1px solid #111",
                      "borderTop": "1px solid #111",
                      "marginTop": "10px",
                      "maxHeight": "315px",
                      "overflow": "hidden",
                    },
                    "suggestionsContainerOpen": Object {},
                    "suggestionsList": Object {
                      "listStyle": "none",
                      "marginBottom": "0",
                      "marginTop": "0",
                      "padding": "0",
                    },
                  }
                }
              >
                <Autowhatever
                  containerProps={Object {}}
                  getSectionItems={[Function]}
                  highlightedItemIndex={0}
                  highlightedSectionIndex={null}
                  id="1"
                  inputProps={
                    Object {
                      "onBlur": [Function],
                      "onChange": [Function],
                      "onFocus": [Function],
                      "onKeyDown": [Function],
                      "placeholder": "Type a command",
                      "value": "",
                    }
                  }
                  itemProps={[Function]}
                  items={
                    Array [
                      Object {
                        "command": [Function],
                        "id": 1,
                        "name": "Foo",
                      },
                      Object {
                        "command": [Function],
                        "id": 2,
                        "name": "Bar",
                      },
                      Object {
                        "command": [Function],
                        "id": 3,
                        "name": "Baz",
                      },
                      Object {
                        "command": [Function],
                        "id": 4,
                        "name": "Fizz",
                      },
                      Object {
                        "command": [Function],
                        "id": 5,
                        "name": "Fizz Buzz",
                      },
                    ]
                  }
                  multiSection={false}
                  renderInputComponent={[Function]}
                  renderItem={[Function]}
                  renderItemData={
                    Object {
                      "query": "",
                    }
                  }
                  renderItemsContainer={[Function]}
                  renderSectionTitle={[Function]}
                  theme={
                    Object {
                      "container": Object {
                        "fontFamily": "helvetica, sans-serif",
                        "fontSize": "12px",
                        "width": "605px",
                      },
                      "containerOpen": Object {},
                      "content": Object {
                        "WebkitOverflowScrolling": "touch",
                        "background": "rgb(48, 51, 56)",
                        "border": "0px none",
                        "borderRadius": "4px",
                        "bottom": "auto",
                        "boxShadow": "rgb(0, 0, 0) 0px 2px 4px 0px",
                        "left": "50%",
                        "marginRight": "-50%",
                        "minWidth": "600px",
                        "outline": "none",
                        "overflow": "hidden",
                        "padding": "10px",
                        "position": "absolute",
                        "right": "auto",
                        "top": "80px",
                        "transform": "translate(-50%, 0)",
                      },
                      "highlight": Object {
                        "backgroundColor": "yellow",
                      },
                      "input": Object {
                        "backgroundColor": "#1f2021",
                        "border": "2px solid #2196F3",
                        "borderRadius": "4px",
                        "caretColor": "#2196F3",
                        "color": "#ababab",
                        "fontSize": "14px",
                        "outline": "none",
                        "padding": "6px",
                        "width": "590px",
                      },
                      "inputFocused": Object {},
                      "inputOpen": Object {},
                      "item": Object {
                        "backgroundColor": "#2c313a",
                        "border": "1px solid #111",
                        "borderTop": "0px none",
                        "color": "#ababab",
                        "padding": "14px 12px",
                      },
                      "itemFirst": Object {
                        "backgroundColor": "#3a3f4b",
                        "color": "#ffffff",
                      },
                      "itemHighlighted": Object {
                        "backgroundColor": "#3a3f4b",
                        "color": "#ffffff",
                      },
                      "itemsContainer": Object {
                        "borderBottom": "1px solid #111",
                        "borderTop": "1px solid #111",
                        "marginTop": "10px",
                        "maxHeight": "315px",
                        "overflow": "hidden",
                      },
                      "itemsContainerOpen": Object {},
                      "itemsList": Object {
                        "listStyle": "none",
                        "marginBottom": "0",
                        "marginTop": "0",
                        "padding": "0",
                      },
                      "overlay": Object {
                        "backgroundColor": "rgba(0, 0, 0, 0.75)",
                      },
                      "sectionContainer": Object {},
                      "sectionContainerFirst": Object {},
                      "sectionTitle": Object {},
                    }
                  }
                >
                  <div
                    aria-expanded={true}
                    aria-haspopup="listbox"
                    aria-owns="react-autowhatever-1"
                    key="react-autowhatever-1-container"
                    role="combobox"
                    style={
                      Object {
                        "fontFamily": "helvetica, sans-serif",
                        "fontSize": "12px",
                        "width": "605px",
                      }
                    }
                  >
                    <input
                      aria-activedescendant="react-autowhatever-1--item-0"
                      aria-autocomplete="list"
                      aria-controls="react-autowhatever-1"
                      autoComplete="off"
                      key="react-autowhatever-1-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Type a command"
                      style={
                        Object {
                          "backgroundColor": "#1f2021",
                          "border": "2px solid #2196F3",
                          "borderRadius": "4px",
                          "caretColor": "#2196F3",
                          "color": "#ababab",
                          "fontSize": "14px",
                          "outline": "none",
                          "padding": "6px",
                          "width": "590px",
                        }
                      }
                      type="text"
                      value=""
                    />
                    <div
                      id="react-autowhatever-1"
                      key="react-autowhatever-1-items-container"
                      role="listbox"
                      style={
                        Object {
                          "borderBottom": "1px solid #111",
                          "borderTop": "1px solid #111",
                          "marginTop": "10px",
                          "maxHeight": "315px",
                          "overflow": "hidden",
                        }
                      }
                    >
                      <ItemsList
                        getItemId={[Function]}
                        highlightedItemIndex={0}
                        itemProps={[Function]}
                        items={
                          Array [
                            Object {
                              "command": [Function],
                              "id": 1,
                              "name": "Foo",
                            },
                            Object {
                              "command": [Function],
                              "id": 2,
                              "name": "Bar",
                            },
                            Object {
                              "command": [Function],
                              "id": 3,
                              "name": "Baz",
                            },
                            Object {
                              "command": [Function],
                              "id": 4,
                              "name": "Fizz",
                            },
                            Object {
                              "command": [Function],
                              "id": 5,
                              "name": "Fizz Buzz",
                            },
                          ]
                        }
                        keyPrefix="react-autowhatever-1-"
                        onHighlightedItemChange={[Function]}
                        renderItem={[Function]}
                        renderItemData={
                          Object {
                            "query": "",
                          }
                        }
                        sectionIndex={null}
                        theme={[Function]}
                      >
                        <ul
                          key="react-autowhatever-1-items-list"
                          role="listbox"
                          style={
                            Object {
                              "listStyle": "none",
                              "marginBottom": "0",
                              "marginTop": "0",
                              "padding": "0",
                            }
                          }
                        >
                          <Item
                            aria-selected={true}
                            data-section-index={null}
                            data-suggestion-index={0}
                            id="react-autowhatever-1--item-0"
                            isHighlighted={true}
                            item={
                              Object {
                                "command": [Function],
                                "id": 1,
                                "name": "Foo",
                              }
                            }
                            itemIndex={0}
                            key="react-autowhatever-1-item-0"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            renderItem={[Function]}
                            renderItemData={
                              Object {
                                "query": "",
                              }
                            }
                            sectionIndex={null}
                            style={
                              Object {
                                "backgroundColor": "#3a3f4b",
                                "border": "1px solid #111",
                                "borderTop": "0px none",
                                "color": "#ffffff",
                                "padding": "14px 12px",
                              }
                            }
                          >
                            <li
                              aria-selected={true}
                              data-section-index={null}
                              data-suggestion-index={0}
                              id="react-autowhatever-1--item-0"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              role="option"
                              style={
                                Object {
                                  "backgroundColor": "#3a3f4b",
                                  "border": "1px solid #111",
                                  "borderTop": "0px none",
                                  "color": "#ffffff",
                                  "padding": "14px 12px",
                                }
                              }
                            >
                              <div
                                className="item"
                              >
                                <span>
                                  Foo
                                </span>
                              </div>
                            </li>
                          </Item>
                          <Item
                            aria-selected={false}
                            data-section-index={null}
                            data-suggestion-index={1}
                            id="react-autowhatever-1--item-1"
                            isHighlighted={false}
                            item={
                              Object {
                                "command": [Function],
                                "id": 2,
                                "name": "Bar",
                              }
                            }
                            itemIndex={1}
                            key="react-autowhatever-1-item-1"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            renderItem={[Function]}
                            renderItemData={
                              Object {
                                "query": "",
                              }
                            }
                            sectionIndex={null}
                            style={
                              Object {
                                "backgroundColor": "#2c313a",
                                "border": "1px solid #111",
                                "borderTop": "0px none",
                                "color": "#ababab",
                                "padding": "14px 12px",
                              }
                            }
                          >
                            <li
                              aria-selected={false}
                              data-section-index={null}
                              data-suggestion-index={1}
                              id="react-autowhatever-1--item-1"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              role="option"
                              style={
                                Object {
                                  "backgroundColor": "#2c313a",
                                  "border": "1px solid #111",
                                  "borderTop": "0px none",
                                  "color": "#ababab",
                                  "padding": "14px 12px",
                                }
                              }
                            >
                              <div
                                className="item"
                              >
                                <span>
                                  Bar
                                </span>
                              </div>
                            </li>
                          </Item>
                          <Item
                            aria-selected={false}
                            data-section-index={null}
                            data-suggestion-index={2}
                            id="react-autowhatever-1--item-2"
                            isHighlighted={false}
                            item={
                              Object {
                                "command": [Function],
                                "id": 3,
                                "name": "Baz",
                              }
                            }
                            itemIndex={2}
                            key="react-autowhatever-1-item-2"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            renderItem={[Function]}
                            renderItemData={
                              Object {
                                "query": "",
                              }
                            }
                            sectionIndex={null}
                            style={
                              Object {
                                "backgroundColor": "#2c313a",
                                "border": "1px solid #111",
                                "borderTop": "0px none",
                                "color": "#ababab",
                                "padding": "14px 12px",
                              }
                            }
                          >
                            <li
                              aria-selected={false}
                              data-section-index={null}
                              data-suggestion-index={2}
                              id="react-autowhatever-1--item-2"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              role="option"
                              style={
                                Object {
                                  "backgroundColor": "#2c313a",
                                  "border": "1px solid #111",
                                  "borderTop": "0px none",
                                  "color": "#ababab",
                                  "padding": "14px 12px",
                                }
                              }
                            >
                              <div
                                className="item"
                              >
                                <span>
                                  Baz
                                </span>
                              </div>
                            </li>
                          </Item>
                          <Item
                            aria-selected={false}
                            data-section-index={null}
                            data-suggestion-index={3}
                            id="react-autowhatever-1--item-3"
                            isHighlighted={false}
                            item={
                              Object {
                                "command": [Function],
                                "id": 4,
                                "name": "Fizz",
                              }
                            }
                            itemIndex={3}
                            key="react-autowhatever-1-item-3"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            renderItem={[Function]}
                            renderItemData={
                              Object {
                                "query": "",
                              }
                            }
                            sectionIndex={null}
                            style={
                              Object {
                                "backgroundColor": "#2c313a",
                                "border": "1px solid #111",
                                "borderTop": "0px none",
                                "color": "#ababab",
                                "padding": "14px 12px",
                              }
                            }
                          >
                            <li
                              aria-selected={false}
                              data-section-index={null}
                              data-suggestion-index={3}
                              id="react-autowhatever-1--item-3"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              role="option"
                              style={
                                Object {
                                  "backgroundColor": "#2c313a",
                                  "border": "1px solid #111",
                                  "borderTop": "0px none",
                                  "color": "#ababab",
                                  "padding": "14px 12px",
                                }
                              }
                            >
                              <div
                                className="item"
                              >
                                <span>
                                  Fizz
                                </span>
                              </div>
                            </li>
                          </Item>
                          <Item
                            aria-selected={false}
                            data-section-index={null}
                            data-suggestion-index={4}
                            id="react-autowhatever-1--item-4"
                            isHighlighted={false}
                            item={
                              Object {
                                "command": [Function],
                                "id": 5,
                                "name": "Fizz Buzz",
                              }
                            }
                            itemIndex={4}
                            key="react-autowhatever-1-item-4"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            renderItem={[Function]}
                            renderItemData={
                              Object {
                                "query": "",
                              }
                            }
                            sectionIndex={null}
                            style={
                              Object {
                                "backgroundColor": "#2c313a",
                                "border": "1px solid #111",
                                "borderTop": "0px none",
                                "color": "#ababab",
                                "padding": "14px 12px",
                              }
                            }
                          >
                            <li
                              aria-selected={false}
                              data-section-index={null}
                              data-suggestion-index={4}
                              id="react-autowhatever-1--item-4"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              role="option"
                              style={
                                Object {
                                  "backgroundColor": "#2c313a",
                                  "border": "1px solid #111",
                                  "borderTop": "0px none",
                                  "color": "#ababab",
                                  "padding": "14px 12px",
                                }
                              }
                            >
                              <div
                                className="item"
                              >
                                <span>
                                  Fizz Buzz
                                </span>
                              </div>
                            </li>
                          </Item>
                        </ul>
                      </ItemsList>
                    </div>
                  </div>
                </Autowhatever>
              </Autosuggest>
            </div>
          </div>
        </ModalPortal>
      </Portal>
    </Modal>
  </div>
</CommandPalette>
`;

exports[`props.display should not display the command palette in react-modal when false 1`] = `
<CommandPalette
  closeOnSelect={false}
  commands={
    Array [
      Object {
        "command": [Function],
        "id": 1,
        "name": "Foo",
      },
      Object {
        "command": [Function],
        "id": 2,
        "name": "Bar",
      },
      Object {
        "command": [Function],
        "id": 3,
        "name": "Baz",
      },
      Object {
        "command": [Function],
        "id": 4,
        "name": "Fizz",
      },
      Object {
        "command": [Function],
        "id": 5,
        "name": "Fizz Buzz",
      },
    ]
  }
  display="inline"
  hotKeys="command+shift+p"
  maxDisplayed={7}
  options={
    Object {
      "allowTypo": true,
      "key": "name",
      "keys": Array [
        "name",
      ],
      "limit": 7,
      "scoreFn": null,
      "threshold": -Infinity,
    }
  }
>
  <div
    className="react-command-palette"
  >
    <Autosuggest
      alwaysRenderSuggestions={true}
      focusInputOnSuggestionClick={true}
      getSuggestionValue={[Function]}
      highlightFirstSuggestion={true}
      id="1"
      inputProps={
        Object {
          "onChange": [Function],
          "onKeyDown": undefined,
          "placeholder": "Type a command",
          "value": "",
        }
      }
      multiSection={false}
      onSuggestionSelected={[Function]}
      onSuggestionsFetchRequested={[Function]}
      renderSuggestion={[Function]}
      renderSuggestionsContainer={[Function]}
      shouldRenderSuggestions={[Function]}
      suggestions={Array []}
      theme={
        Object {
          "container": Object {
            "fontFamily": "helvetica, sans-serif",
            "fontSize": "12px",
            "width": "605px",
          },
          "containerOpen": Object {},
          "content": Object {
            "WebkitOverflowScrolling": "touch",
            "background": "rgb(48, 51, 56)",
            "border": "0px none",
            "borderRadius": "4px",
            "bottom": "auto",
            "boxShadow": "rgb(0, 0, 0) 0px 2px 4px 0px",
            "left": "50%",
            "marginRight": "-50%",
            "minWidth": "600px",
            "outline": "none",
            "overflow": "hidden",
            "padding": "10px",
            "position": "absolute",
            "right": "auto",
            "top": "80px",
            "transform": "translate(-50%, 0)",
          },
          "highlight": Object {
            "backgroundColor": "yellow",
          },
          "input": Object {
            "backgroundColor": "#1f2021",
            "border": "2px solid #2196F3",
            "borderRadius": "4px",
            "caretColor": "#2196F3",
            "color": "#ababab",
            "fontSize": "14px",
            "outline": "none",
            "padding": "6px",
            "width": "590px",
          },
          "inputFocused": Object {},
          "inputOpen": Object {},
          "overlay": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.75)",
          },
          "sectionContainer": Object {},
          "sectionContainerFirst": Object {},
          "sectionTitle": Object {},
          "suggestion": Object {
            "backgroundColor": "#2c313a",
            "border": "1px solid #111",
            "borderTop": "0px none",
            "color": "#ababab",
            "padding": "14px 12px",
          },
          "suggestionFirst": Object {
            "backgroundColor": "#3a3f4b",
            "color": "#ffffff",
          },
          "suggestionHighlighted": Object {
            "backgroundColor": "#3a3f4b",
            "color": "#ffffff",
          },
          "suggestionsContainer": Object {
            "borderBottom": "1px solid #111",
            "borderTop": "1px solid #111",
            "marginTop": "10px",
            "maxHeight": "315px",
            "overflow": "hidden",
          },
          "suggestionsContainerOpen": Object {},
          "suggestionsList": Object {
            "listStyle": "none",
            "marginBottom": "0",
            "marginTop": "0",
            "padding": "0",
          },
        }
      }
    >
      <Autowhatever
        containerProps={Object {}}
        getSectionItems={[Function]}
        highlightedItemIndex={null}
        highlightedSectionIndex={null}
        id="1"
        inputProps={
          Object {
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyDown": [Function],
            "placeholder": "Type a command",
            "value": "",
          }
        }
        itemProps={[Function]}
        items={Array []}
        multiSection={false}
        renderInputComponent={[Function]}
        renderItem={[Function]}
        renderItemData={
          Object {
            "query": "",
          }
        }
        renderItemsContainer={[Function]}
        renderSectionTitle={[Function]}
        theme={
          Object {
            "container": Object {
              "fontFamily": "helvetica, sans-serif",
              "fontSize": "12px",
              "width": "605px",
            },
            "containerOpen": Object {},
            "content": Object {
              "WebkitOverflowScrolling": "touch",
              "background": "rgb(48, 51, 56)",
              "border": "0px none",
              "borderRadius": "4px",
              "bottom": "auto",
              "boxShadow": "rgb(0, 0, 0) 0px 2px 4px 0px",
              "left": "50%",
              "marginRight": "-50%",
              "minWidth": "600px",
              "outline": "none",
              "overflow": "hidden",
              "padding": "10px",
              "position": "absolute",
              "right": "auto",
              "top": "80px",
              "transform": "translate(-50%, 0)",
            },
            "highlight": Object {
              "backgroundColor": "yellow",
            },
            "input": Object {
              "backgroundColor": "#1f2021",
              "border": "2px solid #2196F3",
              "borderRadius": "4px",
              "caretColor": "#2196F3",
              "color": "#ababab",
              "fontSize": "14px",
              "outline": "none",
              "padding": "6px",
              "width": "590px",
            },
            "inputFocused": Object {},
            "inputOpen": Object {},
            "item": Object {
              "backgroundColor": "#2c313a",
              "border": "1px solid #111",
              "borderTop": "0px none",
              "color": "#ababab",
              "padding": "14px 12px",
            },
            "itemFirst": Object {
              "backgroundColor": "#3a3f4b",
              "color": "#ffffff",
            },
            "itemHighlighted": Object {
              "backgroundColor": "#3a3f4b",
              "color": "#ffffff",
            },
            "itemsContainer": Object {
              "borderBottom": "1px solid #111",
              "borderTop": "1px solid #111",
              "marginTop": "10px",
              "maxHeight": "315px",
              "overflow": "hidden",
            },
            "itemsContainerOpen": Object {},
            "itemsList": Object {
              "listStyle": "none",
              "marginBottom": "0",
              "marginTop": "0",
              "padding": "0",
            },
            "overlay": Object {
              "backgroundColor": "rgba(0, 0, 0, 0.75)",
            },
            "sectionContainer": Object {},
            "sectionContainerFirst": Object {},
            "sectionTitle": Object {},
          }
        }
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-owns="react-autowhatever-1"
          key="react-autowhatever-1-container"
          role="combobox"
          style={
            Object {
              "fontFamily": "helvetica, sans-serif",
              "fontSize": "12px",
              "width": "605px",
            }
          }
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-controls="react-autowhatever-1"
            autoComplete="off"
            key="react-autowhatever-1-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Type a command"
            style={
              Object {
                "backgroundColor": "#1f2021",
                "border": "2px solid #2196F3",
                "borderRadius": "4px",
                "caretColor": "#2196F3",
                "color": "#ababab",
                "fontSize": "14px",
                "outline": "none",
                "padding": "6px",
                "width": "590px",
              }
            }
            type="text"
            value=""
          />
          <div
            id="react-autowhatever-1"
            key="react-autowhatever-1-items-container"
            role="listbox"
            style={
              Object {
                "borderBottom": "1px solid #111",
                "borderTop": "1px solid #111",
                "marginTop": "10px",
                "maxHeight": "315px",
                "overflow": "hidden",
              }
            }
          />
        </div>
      </Autowhatever>
    </Autosuggest>
  </div>
</CommandPalette>
`;
